--- a/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
@@ -1,49 +1,19 @@
-@rojo: #FF0000;
-
-.errorFormulario{
-    display: none;
-    color: @rojo;
-}
-.errorFecha{
-    display: none;
-    color: @rojo;
-}
-.fecha1Vacia{
-    display: none;
-    color: @rojo; 
-}
-.fecha2Vacia{
-    display: none;
-    color: @rojo; 
-}
-.fecha1mal{
-    display: none;
-    color: @rojo;
-}
-.fecha2mal{
-    display: none;
-    color: @rojo; 
-}
-.errorServlet{
-    color: @rojo;
-}
-
-
-
-//MENU INICIO
-
+@verde: #04B404;
 
 body{
 	text-align: center;
 }
 
-.headera{	
-	padding: 10px 0 10px 0 ;
-	margin: auto;
+.headera{
+    padding: 10px 0 10px 0 ;
+    margin: auto; 
+    img{
+	width: 200px;
+    }
 }
 
-.headera img{
-	width: 200px;
+.cerrar{
+    button: 0px;
 }
 
 form{
@@ -97,14 +67,6 @@ nav ul li a{
 	width: 100%;
 }
 
-.futer{
-	padding-top: 5rem;
-	padding-bottom: 3rem;
-}
-
-#imgInicio{
-    margin: 0 auto;
-}
 
 @media (min-width: 400px) {
   .table-responsive {
