--- a/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
@@ -1,49 +1,33 @@
-@rojo: #FF0000;
+@verde: #04B404;
+
 
 .errorFormulario{
     display: none;
-    color: @rojo;
+    color: red;
 }
-.errorFecha{
+.errorTexto{
     display: none;
-    color: @rojo;
+    color: red;
 }
-.fecha1Vacia{
+.errorRadio{
     display: none;
-    color: @rojo; 
+    color: red;
 }
-.fecha2Vacia{
-    display: none;
-    color: @rojo; 
-}
-.fecha1mal{
-    display: none;
-    color: @rojo;
-}
-.fecha2mal{
-    display: none;
-    color: @rojo; 
-}
-.errorServlet{
-    color: @rojo;
-}
-
-
-
-//MENU INICIO
-
 
 body{
 	text-align: center;
 }
 
-.headera{	
-	padding: 10px 0 10px 0 ;
-	margin: auto;
+.headera{
+    padding: 10px 0 10px 0 ;
+    margin: auto; 
+    img{
+	width: 200px;
+    }
 }
 
-.headera img{
-	width: 200px;
+.cerrar{
+    button: 0px;
 }
 
 form{
@@ -97,14 +81,15 @@ nav ul li a{
 	width: 100%;
 }
 
-.futer{
-	padding-top: 5rem;
-	padding-bottom: 3rem;
-}
 
 #imgInicio{
     margin: 0 auto;
 }
+
+.ingresosYreintegros{
+    margin: auto;
+}
+
 
 @media (min-width: 400px) {
   .table-responsive {
