--- a/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
@@ -13,6 +13,8 @@
     display: none;
     color: red;
 }
+//////// menu inicio
+
 
 body{
 	text-align: center;
@@ -23,6 +25,7 @@ body{
     margin: auto; 
     img{
 	width: 200px;
+        margin: auto;
     }
 }
 
@@ -79,15 +82,6 @@ nav ul li a{
 
 .derecha img{
 	width: 100%;
-}
-
-
-#imgInicio{
-    margin: 0 auto;
-}
-
-.ingresosYreintegros{
-    margin: auto;
 }
 
 
