--- a/AplicacionBancaria/src/main/webapp/less/lessMovimientos.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMovimientos.less
@@ -1,4 +1,5 @@
 @rojo: #FF0000;
+@verde: #04B404;
 
 .errorFormulario{
     display: none;
@@ -32,18 +33,21 @@
 
 //MENU INICIO
 
-
 body{
 	text-align: center;
 }
 
-.headera{	
-	padding: 10px 0 10px 0 ;
-	margin: auto;
+.headera{
+    padding: 10px 0 10px 0 ;
+    margin: auto; 
+    img{
+	width: 200px;
+        margin: auto;
+    }
 }
 
-.headera img{
-	width: 200px;
+.cerrar{
+    button: 0px;
 }
 
 form{
@@ -97,14 +101,6 @@ nav ul li a{
 	width: 100%;
 }
 
-.futer{
-	padding-top: 5rem;
-	padding-bottom: 3rem;
-}
-
-#imgInicio{
-    margin: 0 auto;
-}
 
 @media (min-width: 400px) {
   .table-responsive {
