--- a/AplicacionBancaria/src/main/webapp/less/lessMovimientos.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMovimientos.less
@@ -29,13 +29,10 @@
     color: @rojo;
 }
 
-
-
-//MENU INICIO
-
-body{
-	text-align: center;
+#contenedorTabla{
+   margin-top: 20px;
 }
+//MENU INICIO
 
 .headera{
     padding: 10px 0 10px 0 ;
@@ -44,30 +41,6 @@ body{
 	width: 200px;
         margin: auto;
     }
-}
-
-.cerrar{
-    button: 0px;
-}
-
-form{
-	margin-top: 25px;
-}
-
-.formu{
-	margin-bottom: 0;
-}
-
-.formu label{
-	margin-bottom: 0;
-}
-
-.formu input{
-	height: 30px;
-}
-
-.el-menu{
-	padding: 15px 0;
 }
 
 .mena{
@@ -83,24 +56,6 @@ nav ul li a{
 	font-size: 20px;
 	width: 100%;
 }
-
-.izquierda img{
-	width: 100%;
-}
-
-.collapsible{
-	margin-bottom: 15px;
-	width: auto;
-}
-
-.collapsible button{
-	width: 100%;
-}
-
-.derecha img{
-	width: 100%;
-}
-
 
 @media (min-width: 400px) {
   .table-responsive {
