--- a/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
@@ -5,8 +5,8 @@ body{
 }
 
 .headera{
-    padding: 10px 0 10px 0 ;
-    margin: auto; 
+    padding: 10px 0 10px 0 !important;
+    margin: auto !important; 
     img{
 	width: 200px;
         margin: auto;
