--- a/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
@@ -13,44 +13,15 @@
     display: none;
     color: red;
 }
-//////// menu inicio
-
-
-body{
-	text-align: center;
-}
+//MENU INICIO
 
 .headera{
-    padding: 10px 0 10px 0 ;
-    margin: auto; 
+    padding: 10px 0 10px 0 !important;
+    margin: auto !important; 
     img{
 	width: 200px;
         margin: auto;
     }
-}
-
-.cerrar{
-    button: 0px;
-}
-
-form{
-	margin-top: 25px;
-}
-
-.formu{
-	margin-bottom: 0;
-}
-
-.formu label{
-	margin-bottom: 0;
-}
-
-.formu input{
-	height: 30px;
-}
-
-.el-menu{
-	padding: 15px 0;
 }
 
 .mena{
@@ -66,24 +37,6 @@ nav ul li a{
 	font-size: 20px;
 	width: 100%;
 }
-
-.izquierda img{
-	width: 100%;
-}
-
-.collapsible{
-	margin-bottom: 15px;
-	width: auto;
-}
-
-.collapsible button{
-	width: 100%;
-}
-
-.derecha img{
-	width: 100%;
-}
-
 
 @media (min-width: 400px) {
   .table-responsive {
