--- a/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMenuInicio.less
@@ -1,17 +1,34 @@
 @verde: #04B404;
 
 body{
-	text-align: center;
+    text-align: center;
 }
 
-.headera{
+.texto-header{
     padding: 10px 0 10px 0 !important;
-    margin: auto !important; 
+    margin: auto !important;
+    
+    img{
+	//width: 200px;
+        margin: auto;
+    }
+}
+ 
+.headera{
+    padding: 10px 0 10px 0 ;
+    margin: auto; 
     img{
 	width: 200px;
         margin: auto;
     }
 }
+
+
+.parrafo-header{
+    cursor: pointer;
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
 
 .cerrar{
     button: 0px;
@@ -31,10 +48,6 @@ form{
 
 .formu input{
 	height: 30px;
-}
-
-.el-menu{
-	padding: 15px 0;
 }
 
 .mena{
