--- a/AplicacionBancaria/src/main/webapp/less/lessinicio.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessinicio.less
@@ -1,17 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow');
+
 @verde: #04B404;
 
 body{
-	text-align: center;
+    text-align: center;
 }
 
-.headera{
+.texto-header{
+    text-align: left;
     padding: 10px 0 10px 0 ;
-    margin: auto; 
+    //margin: auto; 
     img{
 	width: 200px;
         margin: auto;
     }
 }
+    
+.parrafo-header{
+    cursor: pointer;
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.menu{
+    
+   text-align: center;
+}
+
+
 
 .cerrar{
     button: 0px;
@@ -31,10 +46,6 @@ form{
 
 .formu input{
 	height: 30px;
-}
-
-.el-menu{
-	padding: 15px 0;
 }
 
 .mena{
