--- a/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessIngresosYReintegros.less
@@ -38,8 +38,16 @@ nav ul li a{
 	width: 100%;
 }
 
-@media (min-width: 400px) {
-  .table-responsive {
-    display: table;
-  }
+@media (max-width: 1000px) {
+    .texto-header{
+        text-align: center;
+        padding: 10px 0 10px 0 ;
+        //margin: auto; 
+        
+    }
+    img{
+            width: 200px;
+            display: block;
+            margin: 0 auto;
+        }
 }
