--- a/AplicacionBancaria/src/main/webapp/less/lessMostrarClientes.less
+++ b/AplicacionBancaria/src/main/webapp/less/lessMostrarClientes.less
@@ -56,9 +56,14 @@ nav ul li a{
 	font-size: 20px;
 	width: 100%;
 }
-
-@media (min-width: 400px) {
-  .table-responsive {
-    display: table;
-  }
+@media (max-width: 1000px) {
+    .texto-header{
+        text-align: center;
+        padding: 10px 0 10px 0 ; 
+    }
+    img{
+        width: 200px;
+        display: block;
+        margin: 0 auto;
+    }
 }
